Segment retries to write data after some time.

If the Segment can't write its data it will wait for 50 msec and then retry.
If this fails 100 times an error is emitted.
BUG:248176

svn path=/trunk/KDE/kdenetwork/kget/; revision=1219170